// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render ExpensesSummary with 1 expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     expense
     totalling 
    $2.35
  </h1>
</div>
`;

exports[`should correctly render ExpensesSummary with many expenses 1`] = `
<div>
  <h1>
    Viewing 
    22
     expense
    s
     totalling 
    $2,351,234.56
  </h1>
</div>
`;
